Feat: quelques modif